# askpod

./: Dockerfile  README.md
app/: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  users.db
app/alembic/: env.py
app/alembic/versions/: 285526461d3a_add_pdf_name_column_to_podcast_sessions.py
app/backend/: auth.py  connect.py  database.py  exceptions.py  init_db.py  models.py  prompts.py  schemas.py  utils.py  workflows.py
app/backend/tts/: generate.py
askpod/: .gitignore  components.json  package-lock.json  package.json
askpod/components/: Chat.js  Navbar.js  NewSession.js  RightSidebar.js  Sidebar.js  UploadPdf.js
askpod/pages/: _app.js  index.js  login.js  logout.js  protected.js  register.js
askpod/pages/api/: create-session.js  generate-podcast.js  generatePodcast.js  sessions.js  upload-pdf-to-session.js
askpod/pages/api/auth/: login.js  register.js
askpod/pages/session/: [sessionId].js
