[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.8",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "kokoro>=0.7.13",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-milvus>=0.1.8",
    "langchain-openai>=0.3.4",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.70",
    "minio>=7.2.15",
    "misaki[en]>=0.7.13",
    "onnxruntime>=1.20.1",
    "passlib>=1.7.4",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.3",
    "pypdf>=5.3.0",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.38",
    "urllib3>=2.3.0",
]
